debathena-finger-config (1.5) unstable; urgency=low

  * Replace and Conflict debathena-finger (<= 10.0.2-0debathena1)
  * Ship a tiny finger wrapper which adds -m on older platforms

 -- Jonathan Reed <jdreed@mit.edu>  Sat, 12 Mar 2011 20:42:08 -0500

debathena-finger-config (1.4) unstable; urgency=low

  * Remove DEB_AUTO_UPDATE_DEBIAN_CONTROL.
  * Change "Debian-Athena Project" to "Debathena Project".
  * Remove debian/control from version control.
  * Clean up debian/copyright.

 -- Tim Abbott <tabbott@mit.edu>  Sat, 24 Jan 2009 16:15:02 -0500

debathena-finger-config (1.3) unstable; urgency=low

  * Convert to use config-package.mk interface, new in config-package-
    dev 4.5
  * Replace DEB_UNDIVERT_FILES_VERSION with DEB_UNDIVERT_VERSION, as
    this was renamed in config-package-dev 4.5

 -- Tim Abbott <tabbott@mit.edu>  Mon, 21 Apr 2008 19:08:21 -0400

debathena-finger-config (1.2) unstable; urgency=low

  * Use DEB_REMOVE_FILES interface from config-package-dev 4.4.

 -- Tim Abbott <tabbott@mit.edu>  Sat, 19 Apr 2008 21:10:53 -0400

debathena-finger-config (1.1) unstable; urgency=low

  * Convert to the new config-package-dev interface

 -- Shreevatsa R <vatsa@mit.edu>  Sun,  6 Apr 2008 19:56:46 -0400

debathena-finger-config (1.0debathena4) unstable; urgency=low

  * Changed section to net.

 -- Tim Abbott <tabbott@mit.edu>  Fri, 10 Aug 2007 01:24:58 -0400

debathena-finger-config (1.0debathena3) unstable; urgency=low

  * Actually don't divert manpage.

 -- Anders Kaseorg <andersk@mit.edu>  Mon, 06 Aug 2007 21:24:25 -0400

debathena-finger-config (1.0debathena2) unstable; urgency=low

  * Don't divert manpage because we don't provide one.

 -- Anders Kaseorg <andersk@mit.edu>  Mon, 06 Aug 2007 21:08:20 -0400

debathena-finger-config (1.0debathena1) unstable; urgency=low

  * Rebuild with debathena-config-build-common 3.1.

 -- Anders Kaseorg <andersk@mit.edu>  Wed, 18 Jul 2007 01:20:51 -0400

debathena-finger-config (1.0) unstable; urgency=low
